clarify instructions + formatting

--- a/days/w1d3/transformers.ipynb
+++ b/days/w1d3/transformers.ipynb
@@ -2,7 +2,9 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "8oPmEHRSeFsV"
+      },
       "source": [
         "# Transformers tutorial"
       ]
@@ -15,22 +17,26 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/EffiSciencesResearch/ML4G/blob/main/days/w1d3/transformers.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
         "\n",
-        "Preliminary readings:\n",
+        "**Instructions**:\n",
+        "- Read the preliminary readings\n",
+        "\n",
+        "- Answer the questions in each section of the notebook\n",
+        "\n",
+        "- For all torch Modules defined in the notebook:\n",
+        "  - Hide the forward method, write a forward2 method using the properties defined at initialization. \n",
+        "  - Once forward2 is encoded, check your code by opening forward again, compare.\n",
+        "  - test forward2 by renaming it to forward and run the full notebook to see if your dimensions are compatible\n",
+        "  - ignore the dropout layers and device management for now. \n",
+        "\n",
+        "**Preliminary readings**:\n",
         "- High level explication:  https://huggingface.co/course/chapter1/1?fw=pt\n",
         "- Transformer tuto: https://jalammar.github.io/illustrated-transformer/ \n",
         "- Details: Attention is all you need, https://arxiv.org/abs/1706.03762, section Architecture\n",
         "\n",
-        "\n",
-        "Questions:\n",
+        "**First questions**:\n",
         "- What was the original purpose of the transformer architecture?\n",
         "- What are its current uses?\n",
-        "- Informally, what is the purpose of an encoder? What is the purpose of a decoder?\n",
-        "\n",
-        "Instructions: \n",
-        "- Hide the forward method, write a forward2 method using the properties defined at initialization. \n",
-        "- Once forward2 is encoded, check your code by opening forward again, compare.\n",
-        "- test forward2 by renaming it to forward and run the full notebook to see if your dimensions are compatible.\n",
-        "- ignore the dropout layers and device management for now. "
+        "- Informally, what is the purpose of an encoder? What is the purpose of a decoder?\n"
       ]
     },
     {
@@ -53,9 +59,11 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "XY7intndeFsd"
+      },
       "source": [
-        "Notations:\n",
+        "**Notations**:\n",
         "- b: batch size\n",
         "- i: sequence len in\n",
         "- o: sequence len out\n",
@@ -68,11 +76,11 @@
         "\n",
         "We will create a SelfAttention Module that will be usable by those 3 types of attentions.\n",
         "\n",
-        "Question: \n",
+        "**Question**: \n",
         "- Meditate on the meanings of values, keys and queries.\n",
         "- Explain why we need to softmax on the keys dimension?\n",
         "\n",
-        "Bonus Questions:\n",
+        "**Bonus Questions**:\n",
         "- Why do keys and values always go together?\n",
         "- Write the attention formula with einsum for QK^T matrices of dimension (b, seq_len, embed_size)\n",
         "- What happens to the attention in the encoder, in the decoder, in the encoder-decoder attention?\n",
@@ -186,12 +194,14 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "n4w48WP6eFsi"
+      },
       "source": [
-        "QUestion: \n",
+        "**Question**: \n",
         "- Why normalization is always after the addition operation?\n",
         "\n",
-        "Bonus:\n",
+        "**Bonus**:\n",
         "- The output of the multi-head attention is the attention tensor. In the Add & Norm, should we add with the query, key or value?\n",
         "- Which dimension of the tensor is critical in the attention?\n",
         "- Which dimension of the tensor is critical in the feed-forward layer?\n",
@@ -253,13 +263,15 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "wTfkv47zeFsk"
+      },
       "source": [
         "Dans le papier attention is all you need, l'embedding positional utilise des sinus. Nous n'allons pas implementer cette partie: laissons le réseau de neurone apprendre les embedding positional de lui même.\n",
         "\n",
-        "Tip: Use torch.expand(*target_dim) to broadcast with repetitions.\n",
+        "**Tip**: Use torch.expand(*target_dim) to broadcast with repetitions.\n",
         "\n",
-        "Bonus Question : Why do we use ModuleList and not torch.nn.Sequential?"
+        "**Bonus Question** : Why do we use ModuleList and not torch.nn.Sequential?"
       ]
     },
     {
@@ -339,7 +351,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "8qW2J1NLeFsn"
+      },
       "source": [
         "In the decoder block, you have to implement the Masked Multi head Attention, but then we can reuse the Encoder Block"
       ]
@@ -389,9 +403,11 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "o7E5kcu2eFso"
+      },
       "source": [
-        "Tip: Do not use softmax, the Net should return logits. It's a convention."
+        "**Tip**: Do not use softmax, the Net should return logits. It's a convention."
       ]
     },
     {
@@ -537,7 +553,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "pHttlNYreFsp"
+      },
       "source": [
         "## Training"
       ]
@@ -553,7 +571,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "r4saVPUZeFsr"
+      },
       "source": [
         "During training we use teacher forcing: instead of forward passing the number of time required to complete the sentence, we predict for each word the next word at once, in a single forward pass."
       ]
@@ -606,12 +626,12 @@
         "id": "E1xwRrP_I_6m"
       },
       "source": [
-        "Questions:\n",
+        "**Questions**:\n",
         "- How does the transfomer architecture enables parallel training? What is teacher forcing? Why is the inference much slower than training in a sense?\n",
         "- What are the differences between queries and keys?\n",
         "- What are the differences with Bert and GPT?\n",
         "\n",
-        "Bonus\n",
+        "**Bonus**\n",
         "- Hide the init in the SelfAttention class. and write and __init__2\n",
         "- Generate a dataset of tokens. Train a transformer which reverse the order of the tokens.\n",
         "- Why do we add the embedding instead of concatenating them?\n",
@@ -631,13 +651,15 @@
         "id": "fL1TxLBrJCzw"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        ""
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "collapsed_sections": [],
-      "name": "Transformer TP.ipynb",
+      "name": "Copie de Transformer TP.ipynb",
       "provenance": [],
       "toc_visible": true
     },
