Add docstring to Transformer

--- a/days/w1d3/transformers.ipynb
+++ b/days/w1d3/transformers.ipynb
@@ -31,15 +31,16 @@
         "**Preliminary readings**:\n",
         "- High level explication:  https://huggingface.co/course/chapter1/1?fw=pt\n",
         "- Transformer tuto: https://jalammar.github.io/illustrated-transformer/ \n",
-        "- Details: Attention is all you need, https://arxiv.org/abs/1706.03762, section Architecture\n",
+        "- Paper: Attention is all you need, https://arxiv.org/abs/1706.03762, section Architecture\n",
         "\n",
         "**First questions**:\n",
         "- What was the original purpose of the transformer architecture?\n",
         "- What are its current uses?\n",
         "- Informally, what is the purpose of an encoder? What is the purpose of a decoder?\n",
         "\n",
-        "Instructions: \n",
-        "- Hide the forward method, write a forward2 method using the properties defined at initialization. \n",
+        "**Instructions**:\n",
+        "- Go to Colab Settings (top-right) > Editor > Activate the line numerotations and activate the reduction of the code in the editor.\n",
+        "- Hide (reduce the code) off all forward methods containing the solution, write a forward2 method using the properties defined at initialization. \n",
         "- Once forward2 is coded, check your code by opening forward again, compare.\n",
         "- test forward2 by renaming it to forward and run the full notebook to see if your dimensions are compatible.\n",
         "- ignore the dropout layers and device management for now. "
@@ -78,7 +79,7 @@
         "There are 3 types of attention mecanisms in \"Attention is all you need\":\n",
         "- Encoder Attention: values, keys and queries are of shape (b, i, e)\n",
         "- Encoder-Decoder Attention: values and keys come from encoder (b, i, e), queries comes from decoder (b, o, e)\n",
-        "- Decoder Masked Attention: values, keys and queries come from the output sequence in (b, o, e)\n",
+        "- Decoder Masked Attention: values, keys and queries come from the output sequence (b, o, e)\n",
         "\n",
         "We will create a SelfAttention Module that will be usable by those 3 types of attentions.\n",
         "\n",
@@ -92,8 +93,25 @@
         "- What happens to the attention in the encoder, in the decoder, in the encoder-decoder attention?\n",
         "- In the SelfAttention class, self.values = nn.Linear(self.embed_size, self.embed_size, bias=False) : ie, all heads attentions are stored in the same matrix.\n",
         "  - What would you do if there was only one head attention?\n",
-        "- use einops instead of pytorch operations.\n",
+        "- use einops (https://github.com/arogozhnikov/einops) instead of pytorch operations.\n",
         "- meditate on the sequence of information transfers for each dimension."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Note: you may need to restart the kernel to use updated packages.\n"
+          ]
+        }
+      ],
+      "source": [
+        "%pip install einops -q"
       ]
     },
     {
@@ -108,12 +126,6 @@
         "import torch.nn as nn\n",
         "import einops\n",
         "\n",
-        "# Reprendre les notations\n",
-        "# refaire avec torch et pas einops\n",
-        "# Rajouter le masque dans le qhema et le fc_out.\n",
-        "# Rajouter une instruction : avant de reveler verifier que vous avez bien utilisé toutes les parametres et les propriétés\n",
-        "# Dire: It's ok to be wrong, this is difficult.\n",
-        "\n",
         "class SelfAttention(nn.Module):\n",
         "    def __init__(self, embed_size, heads):\n",
         "        super(SelfAttention, self).__init__()\n",
@@ -126,18 +138,32 @@
         "        ), \"Embedding size needs to be divisible by heads\"\n",
         "\n",
         "        # Attention weights of the different heads are stored in the same tensors.\n",
+        "\n",
+        "        # We put all the attention heads in the same Linears Layers:\n",
         "        self.values = nn.Linear(self.embed_size, self.embed_size, bias=False)\n",
         "        self.keys = nn.Linear(self.embed_size, self.embed_size, bias=False)\n",
         "        self.queries = nn.Linear(self.embed_size, self.embed_size, bias=False)\n",
+        "\n",
+        "        # fc_out after having concatenated the results of the attention of each head\n",
         "        self.fc_out = nn.Linear(self.embed_size, embed_size)\n",
         "\n",
         "\n",
         "    def forward(self, values, keys, queries, mask):\n",
+        "        \"\"\"\n",
+        "        values: (N, value_len, embed_size)\n",
+        "        keys: (N, keys_len, embed_size)\n",
+        "        queries: (N, queries_len, embed_size)\n",
+        "\n",
+        "        mask: None or (N, heads, query_len, key_len) \n",
+        "        if mask == 0, attention matrix  -> float(\"-1e20\") (big negative value)\n",
+        "        Ignore the mask, it's too difficult at the beginning.\n",
+        "        \"\"\"\n",
         "        # Get number of training examples\n",
         "        N = queries.shape[0]\n",
         "\n",
         "        value_len, key_len, query_len = values.shape[1], keys.shape[1], queries.shape[1]\n",
         "\n",
+        "        # Compute the values keys and queries\n",
         "        values = self.values(values)  # (N, value_len, embed_size)\n",
         "        keys = self.keys(keys)  # (N, key_len, embed_size)\n",
         "        queries = self.queries(queries)  # (N, query_len, embed_size)\n",
@@ -147,6 +173,7 @@
         "        keys = keys.reshape(N, key_len, self.heads, self.head_dim)\n",
         "        queries = queries.reshape(N, query_len, self.heads, self.head_dim)\n",
         "\n",
+        "        # Compute the similarity between query*keys\n",
         "        # Einsum does matrix mult. for query*keys for each training example\n",
         "        # with every other training example, don't be confused by einsum\n",
         "        # it's just how I like doing matrix multiplication & bmm\n",
@@ -160,11 +187,12 @@
         "            energy = energy.masked_fill(mask == 0, float(\"-1e20\"))\n",
         "\n",
         "        # Normalize energy values similarly to seq2seq + attention\n",
-        "        # so that they sum to 1. Also divide by scaling factor for\n",
-        "        # better stability\n",
+        "        # so that they sum to 1. Also divide by scaling factor for better stability\n",
         "        attention = torch.softmax(energy / (self.head_dim ** (1 / 2)), dim=3)\n",
         "        # attention shape: (N, heads, query_len, key_len)\n",
         "\n",
+        "\n",
+        "        # We compute the attention (aka the ponderated value)\n",
         "        out = torch.einsum(\"nhql,nlhd->nqhd\", [attention, values]).reshape(\n",
         "            N, query_len, self.heads * self.head_dim\n",
         "        )\n",
@@ -173,11 +201,70 @@
         "        # out after matrix multiply: (N, query_len, heads, head_dim), then\n",
         "        # we reshape and flatten the last two dimensions.\n",
         "\n",
-        "        out = self.fc_out(out)\n",
+        "\n",
         "        # Linear layer doesn't modify the shape, final shape will be\n",
         "        # (N, query_len, embed_size)\n",
+        "        return self.fc_out(out)\n",
+        "    \n",
+        "    def forward2(self, values, keys, queries, mask):\n",
+        "        \"\"\"\n",
+        "        values: (N, value_len, embed_size)\n",
+        "        keys: (N, keys_len, embed_size)\n",
+        "        queries: (N, queries_len, embed_size)\n",
         "\n",
-        "        return out"
+        "        mask: None or (N, heads, query_len, key_len) \n",
+        "        if mask == 0, attention matrix  -> float(\"-1e20\") (big negative value)\n",
+        "        Ignore the mask, it's too difficult at the beginning.\n",
+        "        \"\"\"\n",
+        "        N = queries.shape[0]\n",
+        "\n",
+        "        value_len, key_len, query_len = values.shape[1], keys.shape[1], queries.shape[1]\n",
+        "\n",
+        "        # Compute the values keys and queries\n",
+        "        values = self.values(values)\n",
+        "        ...\n",
+        "        ...\n",
+        "\n",
+        "        # Split the embedding into self.heads different pieces\n",
+        "        values = values.reshape(N, value_len, self.heads, self.head_dim)\n",
+        "        ...\n",
+        "        ...\n",
+        "\n",
+        "\n",
+        "        # Compute the similarity between query*keys\n",
+        "        # Einsum does matrix mult. for query*keys for each training example\n",
+        "        # with every other training example, don't be confused by einsum\n",
+        "        # it's just how I like doing matrix multiplication & bmm\n",
+        "        energy = torch.einsum(... , [queries, keys])\n",
+        "        # queries shape: (N, query_len, heads, heads_dim),\n",
+        "        # keys shape: (N, key_len, heads, heads_dim)\n",
+        "        # energy: (N, heads, query_len, key_len)\n",
+        "\n",
+        "\n",
+        "        # Mask padded indices so their weights become 0\n",
+        "        if mask is not None:\n",
+        "            energy = energy.masked_fill(mask == 0, float(\"-1e20\"))\n",
+        "\n",
+        "\n",
+        "        # Normalize energy values similarly to seq2seq + attention\n",
+        "        # so that they sum to 1. Also divide by scaling factor for better stability\n",
+        "        attention = torch.softmax(energy / (self.head_dim ** (1 / 2)), dim=...)\n",
+        "        # attention shape: (N, heads, query_len, key_len)\n",
+        "\n",
+        "\n",
+        "        # We compute the attention (aka the ponderated value)\n",
+        "        out = torch.einsum(\"nhql,nlhd->???\", [attention, values]).reshape(\n",
+        "            N, query_len, self.heads * self.head_dim\n",
+        "        )\n",
+        "        # attention shape: (N, heads, query_len, key_len)\n",
+        "        # values shape: (N, value_len, heads, heads_dim)\n",
+        "        # out after matrix multiply: (N, query_len, heads, head_dim), then\n",
+        "        # we reshape and flatten the last two dimensions.\n",
+        "\n",
+        "\n",
+        "        # Linear layer doesn't modify the shape, final shape will be\n",
+        "        # (N, query_len, embed_size)\n",
+        "        return ..."
       ]
     },
     {
@@ -225,7 +312,6 @@
       "source": [
         "class TransformerBlock(nn.Module):\n",
         "    def __init__(self, embed_size, heads, dropout, forward_expansion):\n",
-        "        # pk TransformerBlock + self\n",
         "        super(TransformerBlock, self).__init__()\n",
         "        self.attention = SelfAttention(embed_size, heads)\n",
         "        self.norm1 = nn.LayerNorm(embed_size)\n",
@@ -240,13 +326,24 @@
         "        self.dropout = nn.Dropout(dropout)\n",
         "\n",
         "    def forward(self, value, key, query, mask):\n",
+        "        \"\"\"Reproduce the above figure.\n",
+        "        \n",
+        "        Tip: Dropout is always used after LayerNorm\n",
+        "        \"\"\"\n",
         "        attention = self.attention(value, key, query, mask)\n",
         "\n",
         "        # Add skip connection, run through normalization and finally dropout\n",
         "        x = self.dropout(self.norm1(attention + query))\n",
         "        forward = self.feed_forward(x)\n",
         "        out = self.dropout(self.norm2(forward + x))\n",
-        "        return out"
+        "        return out\n",
+        "    \n",
+        "    def forward2(self, value, key, query, mask):\n",
+        "        \"\"\"Reproduce the above figure.\n",
+        "        \n",
+        "        Tip: Dropout is always used after LayerNorm\n",
+        "        \"\"\"\n",
+        "        ..."
       ]
     },
     {
@@ -323,18 +420,39 @@
         "        self.dropout = nn.Dropout(dropout)\n",
         "\n",
         "    def forward(self, x, mask):\n",
+        "        \"\"\"\n",
+        "        x: Tokenized tensor (N, seq_length) containing tokens_ids\n",
+        "        mask: Used for masking the padding inside the encoder.\n",
+        "\n",
+        "        Create the position_embedding/word_embedding\n",
+        "        add the embeddings and forward it the all the layers.\n",
+        "\n",
+        "        Tip: In order to create the position_embedding, you will need torch.arange and tensor.expand\n",
+        "        \"\"\"\n",
         "        N, seq_length = x.shape\n",
         "        positions = torch.arange(0, seq_length).expand(N, seq_length).to(self.device)\n",
-        "        out = self.dropout(\n",
-        "            (self.word_embedding(x) + self.position_embedding(positions))\n",
-        "        )\n",
+        "        position_embedding = self.position_embedding(positions)\n",
+        "        word_embedding = self.word_embedding(x)\n",
+        "        out = self.dropout(position_embedding + word_embedding)\n",
         "\n",
         "        # In the Encoder the query, key, value are all the same, it's in the\n",
         "        # decoder this will change. This might look a bit odd in this case.\n",
         "        for layer in self.layers:\n",
         "            out = layer(out, out, out, mask)\n",
         "\n",
-        "        return out"
+        "        return out\n",
+        "    \n",
+        "    def forward2(self, x, mask):\n",
+        "        \"\"\"\n",
+        "        x: Tokenized tensor (N, seq_length) containing tokens_ids\n",
+        "        mask: Used for masking the padding inside the encoder.\n",
+        "\n",
+        "        Create the position_embedding/word_embedding\n",
+        "        add the embeddings and forward it the all the layers.\n",
+        "\n",
+        "        Tip: In order to create the position_embedding, you will need torch.arange and tensor.expand\n",
+        "        \"\"\"\n",
+        "        ..."
       ]
     },
     {
@@ -383,10 +501,15 @@
         "        self.dropout = nn.Dropout(dropout)\n",
         "\n",
         "    def forward(self, x, value, key, src_mask, trg_mask):\n",
+        "        \"\"\"DecoderBlock = masked multi-head attention + TransformerBlock\"\"\"\n",
         "        attention = self.attention(x, x, x, trg_mask)\n",
         "        query = self.dropout(self.norm(attention + x))\n",
         "        out = self.transformer_block(value, key, query, src_mask)\n",
-        "        return out"
+        "        return out\n",
+        "    \n",
+        "    def forward2(self, x, value, key, src_mask, trg_mask):\n",
+        "        \"\"\"DecoderBlock = masked multi-head attention + TransformerBlock\"\"\"\n",
+        "        ..."
       ]
     },
     {
@@ -452,6 +575,7 @@
         "        self.dropout = nn.Dropout(dropout)\n",
         "\n",
         "    def forward(self, x, enc_out, src_mask, trg_mask):\n",
+        "        \"\"\"Same as Encoder\"\"\"\n",
         "        N, seq_length = x.shape\n",
         "        positions = torch.arange(0, seq_length).expand(N, seq_length).to(self.device)\n",
         "        x = self.dropout((self.word_embedding(x) + self.position_embedding(positions)))\n",
@@ -461,7 +585,12 @@
         "\n",
         "        out = self.fc_out(x)\n",
         "\n",
-        "        return out\n"
+        "        return out\n",
+        "\n",
+        "    def forward2(self, x, enc_out, src_mask, trg_mask):\n",
+        "        \"\"\"Same as Encoder\"\"\"\n",
+        "        N, seq_length = x.shape\n",
+        "        ..."
       ]
     },
     {
@@ -608,6 +737,7 @@
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "print(device)\n",
         "\n",
+        "# 0 : pad, 1: Start of Sentence, 2: End of sentence\n",
         "x = torch.tensor([[1, 5, 6, 4, 3, 9, 5, 2, 0], [1, 8, 7, 3, 4, 5, 6, 7, 2]]).to(\n",
         "    device\n",
         ")\n",
@@ -621,7 +751,7 @@
         "    device\n",
         ")\n",
         "\n",
-        "# Why :-1 ?\n",
+        "# Why do we need :-1 here?\n",
         "out = model(x, trg[:, :-1])\n",
         "print(out.shape)"
       ]
@@ -657,9 +787,7 @@
         "id": "fL1TxLBrJCzw"
       },
       "outputs": [],
-      "source": [
-        ""
-      ]
+      "source": []
     }
   ],
   "metadata": {
@@ -678,8 +806,16 @@
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
-      "version": "3.9.12"
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.13"
     }
   },
   "nbformat": 4,
