--- a/days/w1d3/transformers.ipynb
+++ b/days/w1d3/transformers.ipynb
@@ -24,14 +24,14 @@
         "\n",
         "- For all torch Modules defined in the notebook:\n",
         "  - Hide the forward method, write a forward2 method using the properties defined at initialization. \n",
-        "  - Once forward2 is encoded, check your code by opening forward again, compare.\n",
+        "  - Once forward2 is coded, check your code by opening forward again, compare.\n",
         "  - test forward2 by renaming it to forward and run the full notebook to see if your dimensions are compatible\n",
         "  - ignore the dropout layers and device management for now. \n",
         "\n",
         "**Preliminary readings**:\n",
         "- High level explication:  https://huggingface.co/course/chapter1/1?fw=pt\n",
         "- Transformer tuto: https://jalammar.github.io/illustrated-transformer/ \n",
-        "- Paper: Attention is all you need, https://arxiv.org/abs/1706.03762, section Architecture\n",
+        "- Bonus: Paper: Attention is all you need, https://arxiv.org/abs/1706.03762, section Architecture\n",
         "\n",
         "**First questions**:\n",
         "- What was the original purpose of the transformer architecture?\n",
