--- a/days/w1d6/feature_vizu.ipynb
+++ b/days/w1d6/feature_vizu.ipynb
@@ -4,12 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook, we will reproduce some results of https://distill.pub/2017/feature-visualization/"
+    "<a href=\"https://colab.research.google.com/github/EffiSciencesResearch/ML4G/blob/main/Users/days/w1d6/feature_vizu.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
+    "\n",
+    "In this notebook, we will reproduce some results of https://distill.pub/2017/feature-visualization/\n",
+    "\n",
+    "Answer the questions and complete the code."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install einops -q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,17 +45,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import einops\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "\n",
     "def imshow(img, figsize=(6, 6)):\n",
     "    plt.figure(figsize=figsize)\n",
     "    if len(img.shape) == 4:\n",
     "        img = img.squeeze(0)\n",
+    "\n",
+    "    # Why do we need to rearange the dimensions?\n",
     "    img_reshaped = einops.rearrange(img, 'c w h -> w h c')\n",
     "    plt.imshow(img_reshaped.detach())\n",
     "    plt.xticks([])\n",
@@ -51,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,6 +163,10 @@
     "\n",
     "\n",
     "def optimize_img(img, model, lr=0.05, n_epochs=200, class_id=50, apply_transforms: bool =False):\n",
+    "    \"\"\"Maximize the output of the resnet for a given class.\n",
+    "    \n",
+    "    Use Adam to optimize the image.\n",
+    "    \"\"\"\n",
     "    DEVICE = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "    img = img.to(DEVICE)\n",
     "    model = model.to(DEVICE)\n",
@@ -162,7 +182,9 @@
     "        loss.backward()\n",
     "        opt.step()\n",
     "\n",
-    "    imshow(img().cpu())"
+    "    imshow(img().cpu())\n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -212,29 +234,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class decorrImage(nn.Module):\n",
-    "    \"\"\"Here, we decorate the colors of the image.\n",
+    "# Here, we decorate the colors of the image.\n",
     "\n",
-    "    Read about cholewsky decomposition\n",
-    "    https://en.wikipedia.org/wiki/Whitening_transformation\n",
-    "    \"\"\" \n",
+    "#Read about cholewsky decomposition\n",
+    "# https://en.wikipedia.org/wiki/Whitening_transformation\n",
+    "# Why is it better to decorelate the colors of the image? \n",
+    "\n",
+    "\n",
+    "projection = torch.Tensor(\n",
+    "    [[0.26, 0.09, 0.02],\n",
+    "    [0.27, 0.00, -0.05],\n",
+    "    [0.27, -0.09, 0.03]]\n",
+    ")\n",
+    "\n",
+    "# explain what is happenning in the torch.einsum?\n",
+    "# Can you spot some errors in the decorrImage code?\n",
+    "\n",
+    "class decorrImage(nn.Module):\n",
+    "\n",
     "    def __init__(self, scale=1.0, sigmoid=False):\n",
     "        super().__init__()\n",
     "        self.image = nn.Parameter(torch.rand(1, 3, 224, 224))\n",
-    "        projection = torch.Tensor(\n",
-    "            [[0.26, 0.09, 0.02],\n",
-    "             [0.27, 0.00, -0.05],\n",
-    "             [0.27, -0.09, 0.03]])\n",
-    "        self.register_buffer('projection', projection)\n",
     "        self.scale : float = scale\n",
     "        self.use_sigmoid : bool = sigmoid\n",
     "    \n",
     "    def forward(self):\n",
-    "        image = torch.einsum('bchw, Cc -> bChw', self.image, self.projection)\n",
+    "        image = torch.einsum('bchw, Cc -> bChw', self.image, projection)\n",
     "        if self.use_sigmoid:\n",
     "            return torch.sigmoid(image * self.scale + 0.5)\n",
     "        else:\n",
-    "            return torch.clip(image * self.scale + 0.5, min=0.0, max=1.0)"
+    "            return torch.clip(image * self.scale + 0.5, min=0.0, max=1.0)\n",
+    "\n",
+    "# If you've spotted the errors, continue."
    ]
   },
   {
@@ -464,16 +495,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "In the first part of this NB, we tried to maximize directly the output probability of the network.\n",
+    "Now we will try to activate only \n",
+    "\n",
+    "\n",
+    "Strategy:\n",
+    "We have a resnet with N layers.\n",
+    "In each layer, after the convolution, there is a Relu.\n",
+    "\n",
+    "Layer N-1   ->     Layer N    ->     Layer N+1\n",
+    "....        -> Conv ->  ReLU  -> \n",
+    "           forward hook here⤴\n",
+    "\n",
+    "\n",
+    "After the N-th ReLU, we obtain C feature map (aka C channels/color/features)\n",
+    "We will register a forward hook to maximize the output of one of those channels.\n",
+    "\n",
+    "This feature map looks like a very pixelated image. \n",
+    "We will try to maximize the activation of each one of its pixels by maximizing the sum of the pixels.\n",
+    "\"\"\"\n",
+    "\n",
     "class SaveOutput:\n",
     "    def __init__(self):\n",
     "        self.output = None\n",
     "\n",
-    "    # what is __call__ in python?\n",
+    "    # what does the dunder __call__ in python?\n",
+    "    # What is the meaning of those 4 arguments :self, module, module_in, module_out?\n",
     "    def __call__(self, module, module_in, module_out):\n",
+    "        \"\"\"Forward pytorch hook\"\"\"\n",
     "        self.output = module_out\n",
     "        \n",
     "    def clear(self):\n",
-    "        self.output = None    \n",
+    "        self.output = None\n",
+    "\n",
+    "\n",
     "\n",
     "def optimize_img_inner(img, model, relu_id, channel_id, lr=0.05, n_epochs=200, apply_transforms=False):\n",
     "    # optimizes an image to activate some intermediate-layer channel of post-ReLU activation\n",
@@ -483,12 +539,14 @@
     "    opt = torch.optim.Adam(img.parameters(), lr=lr)\n",
     "    \n",
     "    post_relu = []\n",
+    "    # What is the purpose of this for loop?\n",
     "    for i, m in enumerate(model.modules()):\n",
     "        if isinstance(m, nn.ReLU):\n",
     "            hook = SaveOutput()\n",
     "            post_relu.append(hook)\n",
     "            m.register_forward_hook(hook)\n",
-    "        \n",
+    "    \n",
+    "    # What is the purpose of this for loop?\n",
     "    for i in tqdm(range(n_epochs)):\n",
     "        opt.zero_grad()\n",
     "        image = img()\n",
@@ -500,10 +558,18 @@
     "        model(image)\n",
     "        \n",
     "        loss = -(post_relu[relu_id].output[0, channel_id] **2).sum()\n",
+    "        # Why do we need the minus?\n",
+    "        # Do we really need the **2?\n",
     "        loss.backward()\n",
     "        opt.step()\n",
     "\n",
-    "    imshow(img().cpu())"
+    "    imshow(img().cpu())\n",
+    "\n",
+    "\"\"\"\n",
+    "Answer the different questions.\n",
+    "Bonus: Delete SaveOutput and use a global variable and a function instead of a class.\n",
+    "You can draw inspiration from the gradCam exercice: https://github.com/EffiSciencesResearch/ML4G/blob/main/days/w1d4/gradCam/Grad_CAM.ipynb\n",
+    "\"\"\""
    ]
   },
   {
@@ -531,7 +597,13 @@
    ],
    "source": [
     "img = decorrFourierImage(scale=25.0)\n",
-    "optimize_img_inner(img, model, relu_id=4, channel_id=4, n_epochs=400)"
+    "optimize_img_inner(img, model, relu_id=4, channel_id=4, n_epochs=400)\n",
+    "\n",
+    "\"\"\"\n",
+    "What happens when you change the relu_id? \n",
+    "What happens when you change the channel_id?\n",
+    "take 5 minutes to browse openAi microscope: https://openai.com/blog/microscope/\n",
+    "\"\"\""
    ]
   },
   {
@@ -544,10 +616,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "0e1c23db0fbed75fdc2c449bc2586185aea1cb9e55399a7c7962fa341cc34577"
+   "hash": "5674577cfcb2919e9e23d4354f1a722805a54cfb33364ecebfeb18b6bf3b4ab2"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('mlab')",
+   "display_name": "Python 3.10.4 ('automl3.10')",
    "language": "python",
    "name": "python3"
   },
@@ -561,7 +633,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
