Better grad Cam

--- a/days/w1d4/gradCam/Grad_CAM.ipynb
+++ b/days/w1d4/gradCam/Grad_CAM.ipynb
@@ -343,18 +343,24 @@
       },
       "outputs": [],
       "source": [
-        "# To do\n",
+        "# Read the hook tuto https://pytorch.org/tutorials/beginner/former_torchies/nnft_tutorial.html#forward-and-backward-function-hooks\n",
         "\n",
         "output_saving = 0\n",
         "grad_output_saving = 0\n",
         "\n",
-        "def printnorm(self, input, output):\n",
+        "def forward_hook(self, input, output):\n",
         "    global output_saving\n",
+        "    # List of size 1 containing a tensor of size (1, C, H, W)\n",
         "    output_saving = output\n",
         "\n",
-        "def printgradnorm(self, grad_input, grad_output):\n",
+        "def backward_hook(self, grad_input, grad_output):\n",
         "    global grad_output_saving\n",
-        "    grad_output_saving = grad_output"
+        "    # List of size 1 containing a tensor of size (1, C, H, W)\n",
+        "    grad_output_saving = grad_output\n",
+        "\n",
+        "# What does global means in python?\n",
+        "# Why do we need global?\n",
+        "# "
       ]
     },
     {
@@ -382,8 +388,8 @@
         }
       ],
       "source": [
-        "vqa_resnet.resnet_layer4.r_model.layer4[2].conv3.register_forward_hook(printnorm)\n",
-        "vqa_resnet.resnet_layer4.r_model.layer4[2].conv3.register_backward_hook(printgradnorm)"
+        "vqa_resnet.resnet_layer4.r_model.layer4[2].conv3.register_forward_hook(forward_hook)\n",
+        "vqa_resnet.resnet_layer4.r_model.layer4[2].conv3.register_backward_hook(backward_hook)"
       ]
     },
     {
@@ -417,7 +423,9 @@
         "\n",
         "    for i in range(nb_features):\n",
         "        # We take the mean of each feature of the gradient multiplied by the output\n",
-        "        ...\n",
+        "        # use output_saving and grad_output_saving to complete the following line.\n",
+        "        # You have to understand eq. 1 and 2 in the paper.\n",
+        "        grad_cam += ...\n",
         "\n",
         "    Relu = torch.nn.ReLU()\n",
         "    grad_cam = Relu(grad_cam)\n",
@@ -430,18 +438,14 @@
         "\n",
         "    # Heatmap of activation map\n",
         "    activation_heatmap = cv2.applyColorMap(cam, cv2.COLORMAP_HSV)\n",
-        "    # cv2_imshow(activation_heatmap)\n",
         "    axs[1].imshow(activation_heatmap)\n",
         "    axs[1].set_title(\"Heatmap of activation map\")\n",
-        "    # heatmap = plt.pcolor(activation_heatmap)\n",
-        "    # axs[1].colorbar(heatmap)\n",
         "\n",
         "    # Heatmap on picture\n",
         "    img = cv2.imread(dir_path)\n",
         "    org_img = cv2.resize(img, (224, 224))\n",
         "    img_with_heatmap = np.float32(activation_heatmap) + np.float32(org_img)\n",
         "    img_with_heatmap *= 0.99/ np.max(img_with_heatmap)\n",
-        "    # cv2_imshow(img_with_heatmap)\n",
         "    axs[2].imshow(img_with_heatmap)\n",
         "    axs[2].set_title(\"Heatmap on picture\")\n",
         "\n",
