--- a/days/w1d3/transformers.ipynb
+++ b/days/w1d3/transformers.ipynb
@@ -43,7 +43,7 @@
         "- Hide (reduce the code) off all forward methods containing the solution, write a forward2 method using the properties defined at initialization. \n",
         "- Once forward2 is coded, check your code by opening forward again, compare.\n",
         "- test forward2 by renaming it to forward and run the full notebook to see if your dimensions are compatible.\n",
-        "- ignore the dropout layers and device management for now. "
+        "- **ignore the dropout layers, device management, and the masks for now.**"
       ]
     },
     {
@@ -303,7 +303,7 @@
         "\n",
         "**Bonus**:\n",
         "- The output of the multi-head attention is the attention tensor. In the Add & Norm, should we add with the query, key or value?\n",
-        "- Which dimension of the tensor is critical in the attention?\n",
+        "- Which dimension of the tensor is critical in the attention? (Choose between batch dimension, sequence len, and embeddings dimension)\n",
         "- Which dimension of the tensor is critical in the feed-forward layer?\n",
         "\n",
         "(critical means: the information flows along this dimension)\n"
@@ -377,7 +377,7 @@
         "id": "wTfkv47zeFsk"
       },
       "source": [
-        "Dans le papier attention is all you need, l'embedding positional utilise des sinus. Nous n'allons pas implementer cette partie: laissons le réseau de neurone apprendre les embedding positional de lui même.\n",
+        "In the paper attention is all you need, the position embedding  ses sines. We won't implement this part: let the neural network learn the position embedding by itself.\n",
         "\n",
         "**Tip**: Use torch.expand(*target_dim) to broadcast with repetitions.\n",
         "\n",
@@ -677,7 +677,7 @@
         "\n",
         "        trg mask is used only during training.\n",
         "        \"\"\"\n",
-        "        # Why do we use a lower triangular matrix?\n",
+        "        # Bonus: Why do we use a lower triangular matrix?\n",
         "        N, trg_len = trg.shape\n",
         "        trg_mask = torch.tril(torch.ones((trg_len, trg_len))).expand(\n",
         "            N, 1, trg_len, trg_len\n",
@@ -730,21 +730,14 @@
         "id": "PxN9Azn_IMaU",
         "outputId": "18a4e131-5262-40e6-b83a-c56b00001779"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "cpu\n",
-            "torch.Size([2, 7, 10])\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "print(device)\n",
         "\n",
+        "\n",
         "# 0 : pad, 1: Start of Sentence, 2: End of sentence\n",
+        "# Those lists of token_ids are created by the tokenizer\n",
         "x = torch.tensor([[1, 5, 6, 4, 3, 9, 5, 2, 0], [1, 8, 7, 3, 4, 5, 6, 7, 2]]).to(\n",
         "    device\n",
         ")\n",
@@ -760,7 +753,10 @@
         "\n",
         "# Why do we need :-1 here?\n",
         "out = model(x, trg[:, :-1])\n",
-        "print(out.shape)"
+        "print(out.shape)\n",
+        "\n",
+        "# Then we copmpute the CrossEntropy between the output and the trg[:, 1:]\n",
+        "..."
       ]
     },
     {
