--- a/days/w1d3/transformers.ipynb
+++ b/days/w1d3/transformers.ipynb
@@ -259,7 +259,7 @@
         "        # attention shape: (N, heads, query_len, key_len)\n",
         "\n",
         "\n",
-        "        # We compute the attention (aka the ponderated value)\n",
+        "        # We compute the attention\n",
         "        out = torch.einsum(\"nhql,nlhd->???\", [attention, values]).reshape(\n",
         "            N, query_len, self.heads * self.head_dim\n",
         "        )\n",
