--- a/days/w1d1/resnet_template.ipynb
+++ b/days/w1d1/resnet_template.ipynb
@@ -739,7 +739,7 @@
     "# element-wise multiplication of A and B\n",
     "# matrix multiplication of A and B\n",
     "np.einsum('ij,ij->ij', A, B)\n",
-    "np.einsum('ij,jk', A, B)\n"
+    "np.einsum('ij,jk->ik', A, B)\n"
    ]
   },
   {
@@ -945,8 +945,7 @@
     "# padding: int\n",
     "def conv1d(x, weights, stride=1, padding=0):\n",
     "    # Tip: Use from torch.nn.functional import pad\n",
-    "    ...\n",
-    "\n"
+    "    ...\n"
    ]
   },
   {
