--- a/days_old/w1d2_resnet/w1d2_sol.ipynb
+++ b/days_old/w1d2_resnet/w1d2_sol.ipynb
@@ -1506,7 +1506,7 @@
         "id": "QNLlOtScqOe0"
       },
       "source": [
-        "### Step: maxpool2d"
+        "### Step: maxpool2d (Bonus)"
       ]
     },
     {
@@ -1844,7 +1844,7 @@
         "id": "Nks0LdyeI7xg"
       },
       "source": [
-        "### Step: BatchNorm2d"
+        "### Step: BatchNorm2d (Bonus)"
       ]
     },
     {
