--- a/days/w1d5/vanilla_policy_gradient.ipynb
+++ b/days/w1d5/vanilla_policy_gradient.ipynb
@@ -122,6 +122,7 @@
     "\n",
     "            if done:\n",
     "                # if episode is over, record info about episode\n",
+    "                # Is the reward discounted?\n",
     "                ep_ret, ep_len = sum(ep_rews), len(ep_rews)\n",
     "                batch_rets.append(ep_ret)\n",
     "                batch_lens.append(ep_len)\n",
