better feature viz

--- a/days/w1d6/feature_vizu.ipynb
+++ b/days/w1d6/feature_vizu.ipynb
@@ -135,7 +135,7 @@
     "        self.image = nn.Parameter(torch.randn(1, 3, 224, 224))\n",
     "    \n",
     "    def forward(self):\n",
-    "        # Why sigmoid is better than clip?\n",
+    "        # Why sigmoid is better than clip? Give 2 reasons.\n",
     "        return self.image.sigmoid()\n",
     "\n",
     "img = sigmoidImage()\n",
@@ -174,13 +174,8 @@
     "    opt = torch.optim.Adam(img.parameters(), lr=lr)\n",
     "\n",
     "    for _ in tqdm(range(n_epochs)):\n",
-    "        opt.zero_grad()\n",
-    "        image = img()\n",
-    "        if apply_transforms:\n",
-    "            image = TFORM(image)\n",
-    "        loss = -model(image)[0, class_id]\n",
-    "        loss.backward()\n",
-    "        opt.step()\n",
+    "        # Complete the following code\n",
+    "        ...\n",
     "\n",
     "    imshow(img().cpu())\n",
     "\n",
@@ -236,7 +231,7 @@
    "source": [
     "# Here, we decorate the colors of the image.\n",
     "\n",
-    "#Read about cholewsky decomposition\n",
+    "# Read about cholewsky decomposition\n",
     "# https://en.wikipedia.org/wiki/Whitening_transformation\n",
     "# Why is it better to decorelate the colors of the image? \n",
     "\n",
@@ -311,7 +306,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "    \n",
+    "# Explain what is bad in the badFourierImage class?\n",
     "class badFourierImage(nn.Module):\n",
     "    def __init__(self, scale=1.0):\n",
     "        super().__init__()\n",
@@ -602,7 +597,7 @@
     "\"\"\"\n",
     "What happens when you change the relu_id? \n",
     "What happens when you change the channel_id?\n",
-    "take 5 minutes to browse openAi microscope: https://openai.com/blog/microscope/\n",
+    "take 15 minutes to browse openAi microscope: https://openai.com/blog/microscope/\n",
     "\"\"\""
    ]
   },
