--- a/days/w1d6/feature_vizu.ipynb
+++ b/days/w1d6/feature_vizu.ipynb
@@ -492,7 +492,7 @@
    "source": [
     "\"\"\"\n",
     "In the first part of this NB, we tried to maximize directly the output probability of the network.\n",
-    "Now we will try to activate only \n",
+    "Now we will try to activate only one of the feature map.\n",
     "\n",
     "\n",
     "Strategy:\n",
@@ -500,7 +500,7 @@
     "In each layer, after the convolution, there is a Relu.\n",
     "\n",
     "Layer N-1   ->     Layer N    ->     Layer N+1\n",
-    "....        -> Conv ->  ReLU  -> \n",
+    "  ...       -> Conv ->  ReLU  ->        ...\n",
     "           forward hook here⤴\n",
     "\n",
     "\n",
