Better gpt-2 interpretability solution

--- a/days/w1d6/gpt-2_interpretability.ipynb
+++ b/days/w1d6/gpt-2_interpretability.ipynb
@@ -539,10 +539,10 @@
     },
     "gpuClass": "standard",
     "interpreter": {
-      "hash": "2fd0984fba0281b5ef284af29ca774b719b1029bd52fddcabf8232d2cbd23e9e"
+      "hash": "5674577cfcb2919e9e23d4354f1a722805a54cfb33364ecebfeb18b6bf3b4ab2"
     },
     "kernelspec": {
-      "display_name": "Python 3.7.13 ('automl37_install')",
+      "display_name": "Python 3.10.4 ('automl3.10')",
       "language": "python",
       "name": "python3"
     },
@@ -556,7 +556,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.12"
+      "version": "3.10.5"
     },
     "orig_nbformat": 4
   },
