--- a/days/w1d6/gpt-2_interpretability_sol.ipynb
+++ b/days/w1d6/gpt-2_interpretability_sol.ipynb
@@ -87,7 +87,10 @@
         "\n",
         "def make_memorize_output_layer(layer):\n",
         "    def memorize_output_layer(self, input, output):\n",
-        "        global outputs\n",
+        "        global outputs \n",
+        "        # Rmq: global is not necessary, because we are just mofying the content of a list.\n",
+        "        # global would have been necessary if we were modifying a variable.\n",
+        "        \n",
         "        outputs[layer] = output[0].detach()\n",
         "    return memorize_output_layer\n",
         "\n",
