Improve pytorch tuto

--- a/days/w1d1/pytorch_tuto.ipynb
+++ b/days/w1d1/pytorch_tuto.ipynb
@@ -30,7 +30,7 @@
         "id": "UpWDIuzG3sAJ"
       },
       "source": [
-        "Si vous n'êtes pas familier avec numpy, lisez cette cheat sheet: https://www.datacamp.com/cheat-sheet/numpy-cheat-sheet-data-analysis-in-python"
+        "If you are not familiar with numpy, you can read this cheat sheet: https://www.datacamp.com/cheat-sheet/numpy-cheat-sheet-data-analysis-in-python"
       ]
     },
     {
@@ -94,9 +94,6 @@
         "    loss = ...\n",
         "    if t % 100 == 99:\n",
         "        print(t, loss)\n",
-        "\n",
-        "\n",
-        "    # Tip: If you need it  #https://hmkcode.com/ai/backpropagation-step-by-step/ for gradient calculus.\n",
         "\n",
         "    # compute the gradients of the loss wrt a, b, c, d\n",
         "    grad_a = ...\n",
