Add solution to grad cam

--- a/days/w1d4/gradCam/Grad_CAM_easy_mode.ipynb
+++ b/days/w1d4/gradCam/Grad_CAM_easy_mode.ipynb
@@ -427,6 +427,8 @@
         "        # You have to understand eq. 1 and 2 in the paper.\n",
         "        grad_cam += ...\n",
         "\n",
+        "        # Solution: git checkout b60de8aa8b3e26bb78dfc105e8813c3f7f8b7bfc\n",
+        "\n",
         "    Relu = torch.nn.ReLU()\n",
         "    grad_cam = Relu(grad_cam)\n",
         "    grad_cam = grad_cam.detach().numpy()\n",
